# SWRenderer

./: .clang-format  .gitignore  CMakeLists.txt  Readme.md  anisotropic_sampler.h  anisotropic_sampler.inl  canvas.cc  canvas.h  cuda_utils.h  data_pack.h  euler.h  headless_canvas.cc  headless_canvas.h  headless_window.cc  headless_window.h  icanvas.h  irenderer.h  iwindow.h  main.cc  matrix.h  native_window_handle.h  object.cc  object.h  pch.h  pixel_format.cc  pixel_format.h  platform_factory.h  raytracing_kernels.cu  raytracing_kernels.h  raytracing_renderer.cc  raytracing_renderer.h  renderer_like.h  resource.h  resource.inl  sampler.h  scene_controller.cc  scene_controller.h  scene_controller.inl  shading_context.h  swrenderer.cc  (+17 more)
cuda/: cuda_allocator.h
cuda-support/: cuda_allocator.h  cuda_utils.h
exception/: throw.cc  throw.h
foundation/: constexpr_string_hash.h  renderer_concept.h
image-processing/: pixel_format.cc  pixel_format.h  rescaling.cc  rescaling.h  stbi.cc
model/: data_pack.h  mesh_group.h  model_data.cc  model_data.h  model_object.h  vertex.h
model/loader/: obj_loader.h
platform-support/: headless_canvas.cc  headless_canvas.h  platform_defines.h  tstring.h  win32exception.cc  win32exception.h
renderers/: raytracing_kernels.cu  raytracing_kernels.h  raytracing_renderer.cc  raytracing_renderer.h  renderrable.h  swrenderer.cc  swrenderer.h  triangle.h
shading/: pixel_program.h  vertex_program.h
shading/light/: ambient_light.h  light.h  point_light.cc  point_light.h
shading/material/: blinn_material.cc  blinn_material.h  pbr_material.cu  pbr_material.h  phong_material.cc  phong_material.h  simple_vertex_program.cc  simple_vertex_program.h
texture-filtering/: cubic_convolution_kernels.cc  cubic_convolution_kernels.h  cubic_sampler_algorithm.h  filters.h  linear_sampler_algorithm.h  nearest_sampler_algorithm.h  resource.h  resource.inl  resource_data_type.h  texture.h  texture.inl
